aplicando input mascaras

--- a/7-Clinica de Massagem/Cms.Web/wwwroot/js/angularjs/app/views/agenda.html
+++ b/7-Clinica de Massagem/Cms.Web/wwwroot/js/angularjs/app/views/agenda.html
@@ -58,7 +58,7 @@
                                 <label>Modalidade</label>
                                 <select class="form-control" ng-required="required" ng-model="agenda.modalidade">
                                     <option style="display:none !important" value="">Selecione a modalidade</option>
-                                    <option value="30">00:30 mintuos</option>
+                                    <option value="30">00:30 minutos</option>
                                     <option value="60">1:00 hora</option>
                                 </select>
                             </div>
