--- a/7-Clinica de Massagem/Cms.Web/Pages/Shared/_Layout.cshtml
+++ b/7-Clinica de Massagem/Cms.Web/Pages/Shared/_Layout.cshtml
@@ -51,8 +51,10 @@
     <script src="~/js/angularjs/1.7.5/angular.min.js" type="text/javascript"></script>
     <script src="~/js/angularjs/1.7.5/angular-route.min.js" type="text/javascript"></script>
     <script src="~/js/angularjs/vendor/moment-with-locales.js"></script>
+    <script src="~/js/angularjs/vendor/mask.min.js"></script>
+    <script src="~/js/angularjs/vendor/ng-filters-br.js"></script>
     <script src="~/js/angularjs/vendor/angular-moment-picker.min.js" type="text/javascript"></script>
-     <script src="~/js/angularjs/app/app.js" type="text/javascript"></script>
+    <script src="~/js/angularjs/app/app.js" type="text/javascript"></script>
     <script src="~/js/angularjs/app/controllers/clientesController.js" type="text/javascript"></script>
     <script src="~/js/angularjs/app/controllers/agendaController.js" type="text/javascript"></script>
     <script src="~/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
