--- a/7-Clinica de Massagem/Cms.Web/wwwroot/js/angularjs/app/views/cadastro.html
+++ b/7-Clinica de Massagem/Cms.Web/wwwroot/js/angularjs/app/views/cadastro.html
@@ -22,7 +22,7 @@
                         <div class="col-md-4 pl-1">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">CPF</label>
-                                <input type="text" class="form-control" ng-required="required"  maxlength="15" placeholder="CPF" ng-model="cliente.cpf">
+                                <input type="text" class="form-control" ng-required="required"  ui-mask="999.999.999-99"  ng-model="cliente.cpf">
                             </div>
                         </div>
                     </div>
@@ -30,13 +30,13 @@
                         <div class="col-md-6 pr-1">
                             <div class="form-group">
                                 <label>Telefone</label>
-                                <input type="text" class="form-control" placeholder="Telefone" maxlength="12" ng-model="cliente.telefone">
+                                <input type="text" class="form-control"  ui-mask="(99) 99999-9999" ng-model="cliente.telefone">
                             </div>
                         </div>
                         <div class="col-md-6 pl-1">
                             <div class="form-group">
                                 <label>Celular</label>
-                                <input type="text" class="form-control" ng-required="required"  maxlength="12" placeholder="Celular" ng-model="cliente.celular">
+                                <input type="text" class="form-control" ng-required="required" ui-mask="(99) 99999-9999"   ng-model="cliente.celular">
                             </div>
                         </div>
                     </div>
